--- a/web/public/day/index.html
+++ b/web/public/day/index.html
@@ -6,12 +6,12 @@
   <video id="cam" autoplay playsinline></video>
   <div id="ui">
     <div id="tabs">
-      <a href="#prompter">Prompter</a><a href="#rysowniki">Rysowniki</a><a href="#listy">Listy</a>
+     <a href="#prompter">Prompter</a><a href="#rysownik">Rysownik</a><a href="#tbd">TBD</a>
     </div>
     <div id="panel">
       <div id="prompter" class="tab"></div>
-      <div id="rysowniki" class="tab">Rysowniki – wkrótce</div>
-      <div id="listy" class="tab">Listy – wkrótce</div>
+      <<div id="rysownik" class="tab">Rysownik – wkrótce</div>
+      <div id="tbd" class="tab">TBD – wkrótce</div>
     </div>
   </div>
   <script src="./align.js"></script>
